# ArbiterOS

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  NOTICE  README-bak.md  README.md  README.zh-CN.md  compose.dev.langfuse.yaml  compose.dev.yaml  compose.yaml  install-windows.ps1  install.sh  litellm_config.yaml  pyproject.toml  stack.env  stack.env.example
ArbiterOS-Kernel/: .env.example  .gitignore  README.md  litellm_config.yaml  litellm_config.yaml.example  pyproject.toml  requirements.txt  test_llm_as_router.py
ArbiterOS-Kernel/arbiteros_kernel/: checkpoint_lifecycle.py  depends_on_sidecar.py  instruction_depends_on.py  litellm_callback.py  mcp_tool_classification.py  policy.json  policy_check.py  policy_engine_bat.py  policy_registry.json  policy_runtime.py  policy_test_harness.py  protocol_adapter.py  role_policy_cfg_loader.py  role_policy_sets.json  taint_ablation.py  user_approval.py  warm_skill_trust.py
ArbiterOS-Kernel/arbiteros_kernel/cost/: __init__.py  doctor.py  down.py  run_dtap_aligned_smoke.py  run_evidence_demo.py  telemetry.py
ArbiterOS-Kernel/arbiteros_kernel/instruction_parsing/: builder.py  tool_agent_config.py  types.py
ArbiterOS-Kernel/arbiteros_kernel/llm_router/: __init__.py  keyword_router.py  llm_as_router.py  router.py
ArbiterOS-Kernel/arbiteros_kernel/policy/: __init__.py  _init_.py  alignment_sentinel_policy.py  alignment_trigger.py  defaults.py  direct_metadata.py  nanobot_policy.py  openclaw_policy.py  policy_rule_ir.py  policy_rule_ir_authoring.md  rate_limit_policy.py  relational_policy.py  resource_guard_policy.py  security_label_policy.py  tool_evidence_ledger.py  unary_gate_policy.py  unary_gate_rules.json  user_policy_rule_ir_examples.json  user_relational_flow_rules.json  user_relational_policy_rule_ir_examples.json  user_unary_gate_rules.json
ArbiterOS-Kernel/arbiteros_kernel/role_policy_cfg/: semantic_protected_policy.json
ArbiterOS-Kernel/docs/: README.md  kernel-policy_interface.md  registry_usage.md  visualization.md
ArbiterOS-Kernel/redteam/: README.md  case_request_template.md  case_scenario_drafts.md  policy_test_harness.md
ArbiterOS-Kernel/redteam/_automation/: case_manifest.json  run_cases.py
ArbiterOS-Kernel/tests/: conftest.py  test_alignment_trigger.py  test_anthropic_tool_result_claude_code.py  test_checkpoint_lifecycle.py  test_crm_semantic_guards.py  test_depends_on_sidecar.py  test_instruction_depends_on.py  test_kernel_fixes.py  test_policy_audit_config.py  test_protocol_adapter_claude_code.py  test_reference_tool_id_claude_code.py  test_reference_tool_id_codex.py  test_tool_result_emit_dedupe.py  test_user_approval.py
ArbiterOS-Kernel/tests/instruction_parsing/: test_builder.py  test_codex_dsl.py  (+5 more)
checkpoint-plugin/: .gitignore  README.md  pyproject.toml
checkpoint-plugin/integrations/: codex-settings.example.json  opencode-plugin.example.ts  settings.example.json
checkpoint-plugin/tests/: conftest.py  test_claude_hook.py  test_cli.py  test_codex_hook.py  test_coordinator.py  test_env_collector.py  test_env_differ.py  test_env_restorer_hooks.py  test_fs_snapshot.py  test_hook_filter.py  test_hook_installer.py  test_opencode_integration.py  test_opencode_resume.py  test_path_utils.py  test_resume.py  test_store.py  test_trajectory_slicer.py
(+557 files in other folders)
